<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/home"
        android:id="@+id/navHome"
        android:icon="@drawable/home_icon"/>
    <item android:title="@string/menu"
        android:id="@+id/navMenu"
        android:icon="@drawable/menu_icon"/>
    <item android:title="@string/profile"
        android:id="@+id/navProfile"
        android:icon="@drawable/profile_icon"/>
    <item android:title="@string/notification"
        android:id="@+id/navNotifications"
        android:icon="@drawable/notification_icon"/>
</menu>